@@ -1,4 +1,5 @@
 0.04
+ - Add support for control fields.
  - Update copyright years.
 
 0.03 2024-12-20T13:26:01+01:00
